# breakdance

./: .gitignore  CMakeLists.txt  build.bat  build.sh  readme.md
assets/: title.txt
cmake/: embed_title.cmake  embed_video.cmake
src/: main.cpp  player.cpp  player.h  title_data.h  window_ui.cpp  window_ui.h
